--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "terrarium",
+  "homepage": "https://vctorahernndez.github.io/terrarium-vite/",
   "private": true,
   "version": "0.0.1",
   "type": "module",
@@ -10,6 +11,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "start": "vite"
   },
   "eslintConfig": {
@@ -24,6 +27,7 @@
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-import": "2.28.1",
     "eslint-plugin-prettier": "5.0.0",
+    "gh-pages": "6.3.0",
     "prettier": "3.0.3",
     "typescript": "5.8.2",
     "vite": "6.0.5"
