--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@types/papaparse": "5.3.15",
+    "@types/three": "^0.178.0",
     "eslint": "8.48.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-import": "2.28.1",
@@ -33,10 +34,16 @@
     "vite": "6.0.5"
   },
   "dependencies": {
-    "3d-tiles-renderer": "0.4.6",
+    "@takram/three-atmosphere": "0.12.0",
+    "@takram/three-clouds": "0.3.0",
+    "@takram/three-geospatial": "0.2.2",
+    "@takram/three-geospatial-effects": "0.3.2",
+    "3d-tiles-renderer": "^0.4.10",
     "dotenv": "16.4.7",
     "papaparse": "5.5.1",
-    "three": "0.172.0",
+    "postprocessing": "6.37.4",
+    "three": "^0.177.0",
+    "three-stdlib": "2.36.0",
     "yargs": "17.7.2"
   }
 }
